force-app/main/default/objects/Knowledge__kav/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>