force-app/main/default/objects/Knowledge__kav/fields/Bopedicto_Bop_Id__c.field-meta.xml
<CustomField>
    <fullName>Bopedicto_Bop_Id__c</fullName>
    <label>Bop Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>