force-app/main/default/objects/Knowledge__kav/fields/Bopedicto_bop_id_bop_externo__c.field-meta.xml
<CustomField>
    <fullName>Bopedicto_bop_id_bop_externo__c</fullName>
    <label>Id bop externo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>