force-app/main/default/objects/Knowledge__kav/fields/Bopedicto_entidad_nif_Esp__c.field-meta.xml
<CustomField>
    <fullName>Bopedicto_entidad_nif_Esp__c</fullName>
    <label>Entidad nif</label>
    <length>27</length>
    <type>Text</type>
</CustomField>