force-app/main/default/objects/Knowledge__kav/fields/Bopedicto_entidad_nombre_Esp__c.field-meta.xml
<CustomField>
    <fullName>Bopedicto_entidad_nombre_Esp__c</fullName>
    <label>Entidad nombre</label>
    <length>125</length>
    <type>Text</type>
</CustomField>