force-app/main/default/objects/Knowledge__kav/fields/Bopedicto_fecha_entrada_Esp__c.field-meta.xml
<CustomField>
    <fullName>Bopedicto_fecha_entrada_Esp__c</fullName>
    <label>Fecha entrada</label>
    <type>DateTime</type>
</CustomField>