force-app/main/default/objects/Knowledge__kav/fields/Bopedicto_Id__c.field-meta.xml
<CustomField>
    <fullName>Bopedicto_Id__c</fullName>
    <label>Id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>