force-app/main/default/objects/Knowledge__kav/fields/Bopedicto_Id_bop_edicto_externo_Esp__c.field-meta.xml
<CustomField>
    <fullName>Bopedicto_Id_bop_edicto_externo_Esp__c</fullName>
    <label>Id bop edicto externo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>