force-app/main/default/objects/Knowledge__kav/fields/Bopedicto_numero_pagina_Gal__c.field-meta.xml
<CustomField>
    <fullName>Bopedicto_numero_pagina_Gal__c</fullName>
    <label>Número página</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>