force-app/main/default/objects/Knowledge__kav/fields/Bopedicto_texto_Gal__c.field-meta.xml
<CustomField>
    <fullName>Bopedicto_texto_Gal__c</fullName>
    <label>Texto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>