force-app/main/default/objects/Knowledge__kav/fields/Bopedicto_Url_pdf_Esp__c.field-meta.xml
<CustomField>
    <fullName>Bopedicto_Url_pdf_Esp__c</fullName>
    <label>Url pdf</label>
    <type>Url</type>
</CustomField>