force-app/main/default/objects/Knowledge__kav/fields/Categorias_noticia_Espanol__c.field-meta.xml
<CustomField>
    <fullName>Categorias_noticia_Espanol__c</fullName>
    <label>Categorías noticia Español</label>
    <type>TextArea</type>
</CustomField>