force-app/main/default/objects/Knowledge__kav/fields/Categorias_noticia_Galego__c.field-meta.xml
<CustomField>
    <fullName>Categorias_noticia_Galego__c</fullName>
    <label>Categorías noticia Galego</label>
    <type>TextArea</type>
</CustomField>