force-app/main/default/objects/Knowledge__kav/fields/code_bdns__c.field-meta.xml
<CustomField>
    <fullName>code_bdns__c</fullName>
    <label>Code bdns</label>
    <length>8</length>
    <type>Text</type>
</CustomField>