force-app/main/default/objects/Knowledge__kav/fields/CodigoImpactoGenero__c.field-meta.xml
<CustomField>
    <fullName>CodigoImpactoGenero__c</fullName>
    <label>Código</label>
    <length>255</length>
    <type>Text</type>
</CustomField>