force-app/main/default/objects/Knowledge__kav/fields/Contenido_noticia_Galego__c.field-meta.xml
<CustomField>
    <fullName>Contenido_noticia_Galego__c</fullName>
    <label>Contenido noticia Galego</label>
    <length>9000</length>
    <type>LongTextArea</type>
</CustomField>