force-app/main/default/objects/Knowledge__kav/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripción</label>
    <length>9000</length>
    <type>LongTextArea</type>
</CustomField>