force-app/main/default/objects/Knowledge__kav/fields/DescripcionOtro__c.field-meta.xml
<CustomField>
    <fullName>DescripcionOtro__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>