force-app/main/default/objects/Knowledge__kav/fields/Entidades__c.field-meta.xml
<CustomField>
    <fullName>Entidades__c</fullName>
    <label>Entidad 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entidades</valueSetName>
    </valueSet>
</CustomField>