force-app/main/default/objects/Knowledge__kav/fields/ExtractoCastellano__c.field-meta.xml
<CustomField>
    <fullName>ExtractoCastellano__c</fullName>
    <label>Extracto castellano</label>
    <length>7500</length>
    <type>LongTextArea</type>
</CustomField>