force-app/main/default/objects/Knowledge__kav/fields/ExtractoOtraLengua__c.field-meta.xml
<CustomField>
    <fullName>ExtractoOtraLengua__c</fullName>
    <label>Extracto otra lengua</label>
    <length>7500</length>
    <type>LongTextArea</type>
</CustomField>