force-app/main/default/objects/Knowledge__kav/fields/Fecha_de_actualizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_actualizacion__c</fullName>
    <label>Fecha de actualización</label>
    <type>DateTime</type>
</CustomField>