force-app/main/default/objects/Knowledge__kav/fields/Fecha_de_creacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_creacion__c</fullName>
    <label>Fecha de creación</label>
    <type>DateTime</type>
</CustomField>