force-app/main/default/objects/Knowledge__kav/fields/Fecha_del_evento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_del_evento__c</fullName>
    <label>Fecha del evento</label>
    <type>DateTime</type>
</CustomField>