force-app/main/default/objects/Knowledge__kav/fields/Fecha_envio_Convocatoria__c.field-meta.xml
<CustomField>
    <fullName>Fecha_envio_Convocatoria__c</fullName>
    <label>Fecha envío</label>
    <type>Date</type>
</CustomField>