force-app/main/default/objects/Knowledge__kav/fields/fecha_modificacion__c.field-meta.xml
<CustomField>
    <fullName>fecha_modificacion__c</fullName>
    <label>Fecha modificación</label>
    <type>DateTime</type>
</CustomField>