force-app/main/default/objects/Knowledge__kav/fields/Fecha_noticia_Espanol__c.field-meta.xml
<CustomField>
    <fullName>Fecha_noticia_Espanol__c</fullName>
    <label>Fecha noticia Español</label>
    <type>DateTime</type>
</CustomField>