force-app/main/default/objects/Knowledge__kav/fields/Fecha_noticia_Galego__c.field-meta.xml
<CustomField>
    <fullName>Fecha_noticia_Galego__c</fullName>
    <label>Fecha noticia Galego</label>
    <type>DateTime</type>
</CustomField>