force-app/main/default/objects/Knowledge__kav/fields/Fecha_publicacion_Convocatoria__c.field-meta.xml
<CustomField>
    <fullName>Fecha_publicacion_Convocatoria__c</fullName>
    <label>Fecha publicación</label>
    <type>Date</type>
</CustomField>