force-app/main/default/objects/Knowledge__kav/fields/FechaFinSolicitud__c.field-meta.xml
<CustomField>
    <fullName>FechaFinSolicitud__c</fullName>
    <label>Fecha Fin Solicitud</label>
    <type>Date</type>
</CustomField>