force-app/main/default/objects/Knowledge__kav/fields/FechaJustificacion__c.field-meta.xml
<CustomField>
    <fullName>FechaJustificacion__c</fullName>
    <label>Fecha justificación</label>
    <type>Date</type>
</CustomField>