force-app/main/default/objects/Knowledge__kav/fields/FicheroOtrosDocumentos__c.field-meta.xml
<CustomField>
    <fullName>FicheroOtrosDocumentos__c</fullName>
    <label>Fichero</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>