force-app/main/default/objects/Knowledge__kav/fields/fondo_ue__c.field-meta.xml
<CustomField>
    <fullName>fondo_ue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fondo Union Europea</label>
    <type>Checkbox</type>
</CustomField>