force-app/main/default/objects/Knowledge__kav/fields/Id_externo__c.field-meta.xml
<CustomField>
    <fullName>Id_externo__c</fullName>
    <label>Id externo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>