force-app/main/default/objects/Knowledge__kav/fields/Id_extracto_diario_oficial_Convocatoria__c.field-meta.xml
<CustomField>
    <fullName>Id_extracto_diario_oficial_Convocatoria__c</fullName>
    <label>Id extracto diario oficial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>