force-app/main/default/objects/Knowledge__kav/fields/IdiomaFormula__c.field-meta.xml
<CustomField>
    <fullName>IdiomaFormula__c</fullName>
    <formula>IF(TEXT(Language) = &quot;es&quot;, &quot;Español&quot;,
 IF(TEXT(Language) = &quot;es_MX&quot;, &quot;Galego&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idioma</label>
    <type>Text</type>
</CustomField>