force-app/main/default/objects/Knowledge__kav/fields/Imagenes_noticias_Espanol__c.field-meta.xml
<CustomField>
    <fullName>Imagenes_noticias_Espanol__c</fullName>
    <label>Imágenes noticias Español</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>