force-app/main/default/objects/Knowledge__kav/fields/Imagenes_noticias_Galego__c.field-meta.xml
<CustomField>
    <fullName>Imagenes_noticias_Galego__c</fullName>
    <label>Imágenes noticias Galego</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>