force-app/main/default/objects/Knowledge__kav/fields/InicioSolicitud__c.field-meta.xml
<CustomField>
    <fullName>InicioSolicitud__c</fullName>
    <label>Inicio solicitud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>