force-app/main/default/objects/Knowledge__kav/fields/NombreDocumentoCastellano__c.field-meta.xml
<CustomField>
    <fullName>NombreDocumentoCastellano__c</fullName>
    <label>Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>