force-app/main/default/objects/Knowledge__kav/fields/Noticia_Id__c.field-meta.xml
<CustomField>
    <fullName>Noticia_Id__c</fullName>
    <label>Noticia Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>