force-app/main/default/objects/Knowledge__kav/fields/Procedure_Steps__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Steps__c</fullName>
    <inlineHelpText>Use this field to track the ordered procedure steps.</inlineHelpText>
    <label>Procedure Steps</label>
    <length>256</length>
    <type>Html</type>
</CustomField>