force-app/main/default/objects/Knowledge__kav/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <inlineHelpText>Use this field to document the question being answered by this article.  Include important keywords to help users find this article.</inlineHelpText>
    <label>Question</label>
    <length>1300</length>
    <type>Html</type>
</CustomField>