force-app/main/default/objects/Knowledge__kav/fields/Sumario__c.field-meta.xml
<CustomField>
    <fullName>Sumario__c</fullName>
    <label>Sumario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>