force-app/main/default/objects/Knowledge__kav/fields/Titulo_noticia_Espanol__c.field-meta.xml
<CustomField>
    <fullName>Titulo_noticia_Espanol__c</fullName>
    <label>Título noticia Español</label>
    <length>255</length>
    <type>Text</type>
</CustomField>