force-app/main/default/objects/Knowledge__kav/fields/Titulo_noticia_Galego__c.field-meta.xml
<CustomField>
    <fullName>Titulo_noticia_Galego__c</fullName>
    <label>Título noticia Galego</label>
    <length>255</length>
    <type>Text</type>
</CustomField>