force-app/main/default/objects/Knowledge__kav/fields/TituloExtractoCastellano__c.field-meta.xml
<CustomField>
    <fullName>TituloExtractoCastellano__c</fullName>
    <label>Título</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>