force-app/main/default/objects/Knowledge__kav/fields/TituloExtractoOtraLengua__c.field-meta.xml
<CustomField>
    <fullName>TituloExtractoOtraLengua__c</fullName>
    <label>Título</label>
    <length>450</length>
    <type>LongTextArea</type>
</CustomField>