force-app/main/default/objects/Knowledge__kav/fields/Tramite_codigo__c.field-meta.xml
<CustomField>
    <fullName>Tramite_codigo__c</fullName>
    <label>Trámite código</label>
    <length>255</length>
    <type>Text</type>
</CustomField>