force-app/main/default/objects/Knowledge__kav/fields/Tramite_coleccion_normativas_espanol__c.field-meta.xml
<CustomField>
    <fullName>Tramite_coleccion_normativas_espanol__c</fullName>
    <label>Trámite colección normativas español</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>