force-app/main/default/objects/Knowledge__kav/fields/Tramite_descripcion_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_descripcion_galego__c</fullName>
    <label>Trámite descripción galego</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>