force-app/main/default/objects/Knowledge__kav/fields/Tramite_efecto_silencio_admin_espanol__c.field-meta.xml
<CustomField>
    <fullName>Tramite_efecto_silencio_admin_espanol__c</fullName>
    <label>Trámite efecto silencio admin español</label>
    <length>255</length>
    <type>Text</type>
</CustomField>