force-app/main/default/objects/Knowledge__kav/fields/Tramite_efecto_silencio_admin_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_efecto_silencio_admin_galego__c</fullName>
    <label>Trámite efecto silencio admin galego</label>
    <length>255</length>
    <type>Text</type>
</CustomField>