force-app/main/default/objects/Knowledge__kav/fields/Tramite_finalidad_espanol__c.field-meta.xml
<CustomField>
    <fullName>Tramite_finalidad_espanol__c</fullName>
    <label>Trámite finalidad español</label>
    <length>255</length>
    <type>Text</type>
</CustomField>