force-app/main/default/objects/Knowledge__kav/fields/Tramite_id__c.field-meta.xml
<CustomField>
    <fullName>Tramite_id__c</fullName>
    <label>Trámite id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>