force-app/main/default/objects/Knowledge__kav/fields/Tramite_informacion_adicional_espanol__c.field-meta.xml
<CustomField>
    <fullName>Tramite_informacion_adicional_espanol__c</fullName>
    <label>Trámite información adicional español</label>
    <length>255</length>
    <type>Text</type>
</CustomField>