force-app/main/default/objects/Knowledge__kav/fields/Tramite_informacion_adicional_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_informacion_adicional_galego__c</fullName>
    <label>Trámite información adicional galego</label>
    <length>255</length>
    <type>Text</type>
</CustomField>