force-app/main/default/objects/Knowledge__kav/fields/Tramite_nivel_identificacion_sol_esp__c.field-meta.xml
<CustomField>
    <fullName>Tramite_nivel_identificacion_sol_esp__c</fullName>
    <label>Trámite nivel identificación sol español</label>
    <length>255</length>
    <type>Text</type>
</CustomField>