force-app/main/default/objects/Knowledge__kav/fields/Tramite_nivel_identificacion_sol_gal__c.field-meta.xml
<CustomField>
    <fullName>Tramite_nivel_identificacion_sol_gal__c</fullName>
    <label>Trámite nivel identificación sol galego</label>
    <length>255</length>
    <type>Text</type>
</CustomField>