force-app/main/default/objects/Knowledge__kav/fields/Tramite_normativa_basica_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_normativa_basica_galego__c</fullName>
    <label>Trámite normativa básica galego</label>
    <length>255</length>
    <type>Text</type>
</CustomField>