force-app/main/default/objects/Knowledge__kav/fields/Tramite_organo_gestor_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_organo_gestor_galego__c</fullName>
    <label>Trámite órgano gestor galego</label>
    <length>255</length>
    <type>Text</type>
</CustomField>