force-app/main/default/objects/Knowledge__kav/fields/Tramite_plazo_resolucion_espanol__c.field-meta.xml
<CustomField>
    <fullName>Tramite_plazo_resolucion_espanol__c</fullName>
    <label>Trámite plazo resolución español</label>
    <length>80</length>
    <type>Text</type>
</CustomField>