force-app/main/default/objects/Knowledge__kav/fields/Tramite_plazo_resolucion_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_plazo_resolucion_galego__c</fullName>
    <label>Trámite plazo resolución galego</label>
    <length>80</length>
    <type>Text</type>
</CustomField>