force-app/main/default/objects/Knowledge__kav/fields/Tramite_presentacion_espanol__c.field-meta.xml
<CustomField>
    <fullName>Tramite_presentacion_espanol__c</fullName>
    <label>Trámite presentación español</label>
    <length>255</length>
    <type>Text</type>
</CustomField>