force-app/main/default/objects/Knowledge__kav/fields/Tramite_presentacion_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_presentacion_galego__c</fullName>
    <label>Trámite presentación galego</label>
    <length>255</length>
    <type>Text</type>
</CustomField>