force-app/main/default/objects/Knowledge__kav/fields/Tramite_presentar_por_espanol__c.field-meta.xml
<CustomField>
    <fullName>Tramite_presentar_por_espanol__c</fullName>
    <label>Trámite presentar por español</label>
    <length>255</length>
    <type>Text</type>
</CustomField>