force-app/main/default/objects/Knowledge__kav/fields/Tramite_recursos_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_recursos_galego__c</fullName>
    <label>Trámite recursos galego</label>
    <length>255</length>
    <type>Text</type>
</CustomField>