force-app/main/default/objects/Knowledge__kav/fields/Tramite_requisitos_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_requisitos_galego__c</fullName>
    <label>Trámite requisitos galego</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>