force-app/main/default/objects/Knowledge__kav/fields/Tramite_titulo_espanol__c.field-meta.xml
<CustomField>
    <fullName>Tramite_titulo_espanol__c</fullName>
    <label>Trámite título español</label>
    <length>255</length>
    <type>Text</type>
</CustomField>