force-app/main/default/objects/Knowledge__kav/fields/Tramite_titulo_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_titulo_galego__c</fullName>
    <label>Trámite título galego</label>
    <length>255</length>
    <type>Text</type>
</CustomField>