force-app/main/default/objects/Knowledge__kav/fields/Tramite_url_descarga_instancia_espanol__c.field-meta.xml
<CustomField>
    <fullName>Tramite_url_descarga_instancia_espanol__c</fullName>
    <label>Trámite url descarga instancia español</label>
    <type>Url</type>
</CustomField>