force-app/main/default/objects/Knowledge__kav/fields/Tramite_url_descarga_instancia_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_url_descarga_instancia_galego__c</fullName>
    <label>Trámite url descarga instancia galego</label>
    <type>Url</type>
</CustomField>