force-app/main/default/objects/Knowledge__kav/fields/Tramite_url_detalle_tramite_espanol__c.field-meta.xml
<CustomField>
    <fullName>Tramite_url_detalle_tramite_espanol__c</fullName>
    <label>Trámite url detalle trámite español</label>
    <type>Url</type>
</CustomField>