force-app/main/default/objects/Knowledge__kav/fields/Tramite_url_detalle_tramite_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_url_detalle_tramite_galego__c</fullName>
    <label>Trámite url detalle trámite galego</label>
    <type>Url</type>
</CustomField>