force-app/main/default/objects/Knowledge__kav/fields/Tramite_url_inicio_tramitacion_espanol__c.field-meta.xml
<CustomField>
    <fullName>Tramite_url_inicio_tramitacion_espanol__c</fullName>
    <label>Trámite url inicio tramitación español</label>
    <type>Url</type>
</CustomField>