force-app/main/default/objects/Knowledge__kav/fields/Tramite_url_inicio_tramitacion_galego__c.field-meta.xml
<CustomField>
    <fullName>Tramite_url_inicio_tramitacion_galego__c</fullName>
    <label>Trámite url inicio tramitación galego</label>
    <type>Url</type>
</CustomField>