force-app/main/default/objects/Knowledge__kav/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>Url</label>
    <type>Url</type>
</CustomField>