force-app/main/default/objects/Knowledge__kav/fields/URL_documentacion_convocatoria__c.field-meta.xml
<CustomField>
    <fullName>URL_documentacion_convocatoria__c</fullName>
    <label>URL documentación convocatoria</label>
    <type>Url</type>
</CustomField>