force-app/main/default/objects/Knowledge__kav/fields/Url_noticia_Espanol__c.field-meta.xml
<CustomField>
    <fullName>Url_noticia_Espanol__c</fullName>
    <label>Url noticia Español</label>
    <type>Url</type>
</CustomField>