force-app/main/default/objects/Knowledge__kav/fields/Url_noticia_Galego__c.field-meta.xml
<CustomField>
    <fullName>Url_noticia_Galego__c</fullName>
    <label>Url noticia Galego</label>
    <type>Url</type>
</CustomField>