force-app/main/default/objects/Knowledge__kav/fields/URL_publicacion_Convocatoria__c.field-meta.xml
<CustomField>
    <fullName>URL_publicacion_Convocatoria__c</fullName>
    <label>URL publicación</label>
    <type>Url</type>
</CustomField>