force-app/main/default/objects/Knowledge__kav/fields/URLengBR__c.field-meta.xml
<CustomField>
    <fullName>URLengBR__c</fullName>
    <label>URLengBR</label>
    <type>Url</type>
</CustomField>