force-app/main/default/objects/Knowledge__kav/fields/URLEspBR__c.field-meta.xml
<CustomField>
    <fullName>URLEspBR__c</fullName>
    <label>URLEspBR</label>
    <type>Url</type>
</CustomField>