force-app/main/default/objects/Knowledge__kav/recordTypes/Bopedicto.recordType-meta.xml
<RecordType>
    <fullName>Bopedicto</fullName>
    <active>true</active>
    <label>Bopedicto</label>
</RecordType>