force-app/main/default/objects/Knowledge__kav/recordTypes/Convocatoria.recordType-meta.xml
<RecordType>
    <fullName>Convocatoria</fullName>
    <active>true</active>
    <label>Convocatoria</label>
</RecordType>