force-app/main/default/objects/Knowledge__kav/recordTypes/Mediateca.recordType-meta.xml
<RecordType>
    <fullName>Mediateca</fullName>
    <active>true</active>
    <description>Record Type para dar de alta knowledge de Madiateca.</description>
    <label>Mediateca</label>
</RecordType>