force-app/main/default/objects/Knowledge__kav/recordTypes/Noticias.recordType-meta.xml
<RecordType>
    <fullName>Noticias</fullName>
    <active>true</active>
    <label>Noticias</label>
</RecordType>