force-app/main/default/objects/Knowledge__kav/recordTypes/Termalismo.recordType-meta.xml
<RecordType>
    <fullName>Termalismo</fullName>
    <active>true</active>
    <label>Termalismo</label>
</RecordType>