force-app/main/default/objects/Knowledge__kav/recordTypes/Tramite.recordType-meta.xml
<RecordType>
    <fullName>Tramite</fullName>
    <active>true</active>
    <label>Trámite</label>
</RecordType>